src/pages/Detail/DetailCommon.css
/* Prophet/Prediction Detail Common CSS */
.Detail {
   background-color: var(--main-color);
   min-height: 100vh;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
}

.Detail .Content {
   background-color: var(--main-color-light);
   width: 60%;
   height: 90%;
   margin-top: 100px;
   margin-bottom: 5vh;
   padding: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: flex-start;
   border-radius: 8px;
}

.Detail .Section {
   width: 90%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 15px 0;
}

.Detail .SectionTitleAndButton {
   color: white;
   width: 93%;
   padding-bottom: 10px;
   padding-right: 1%;
   box-shadow: 0 4px 2px -2px white;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
}

.Detail .SectionTitleAndButton h2 {
   color: white;
   margin: 0 0;
   margin-bottom: 1px;
}

.Detail .List {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 25px;
}

.Detail .Card {
   width: 90%;
   margin: 30px 0;
}

.Detail .NoCommentOrReview {
   height: 50px;
   color: white;
   display: flex;
   align-items: flex-end;
   font-size: 1.2rem;
}

@media screen and (max-width: 1400px) {
   .Detail .Content {
      width: 75%;
   }
}

@media screen and (max-width: 1100px) {
   .Detail .Content {
      width: 90%;
   }
}

@media screen and (min-width: 750px) {
   .Detail .Card {
      grid-template: 1fr/ 3fr 4fr;
      min-height: 200px;
   }

   .Detail .Card img {
      border-radius: 0;
      border-top-left-radius: var(--border-radius);
      border-bottom-left-radius: var(--border-radius);
   }
   .Detail .Card .NotImg {
      border-radius: 0;
      border-top-right-radius: var(--border-radius);
      border-bottom-right-radius: var(--border-radius);
   }
}

/* Material UI Button */
.Detail .Card .MuiButton-outlined {
   display: none;
}

.Detail .Card {
   filter: brightness(100%);
}

.Detail .Card:hover {
   box-shadow: 0px 0px 8px black;
   transform: scale(1);
   cursor: default;
}

/* AntD Modal */
.ant-modal {
   margin-top: 20vh !important;
}

.ant-modal-content {
}

/* Modal Buttons */
/* Cancel Button */
.ant-modal-root .MuiButton-outlined:first-child {
   color: var(--main-color-light) !important;
   transition: background 0.3s ease-in-out, color 0.3s ease-in-out !important;
}

.ant-modal-root .MuiButton-outlined:first-child:hover {
   color: white !important;
}

/* Submit Button */
.ant-modal-root .MuiButton-outlined:last-child {
   background: var(--main-color-light);
}

.ant-modal-root .MuiButton-outlined:last-child:hover {
   background: rgb(80, 80, 80) !important;
}

/* TextArea border static/hover */
.ant-modal-root .ant-input {
   border-color: rgb(150, 150, 150);
}
.ant-modal-root .ant-input:focus,
.ant-input-focused {
   box-shadow: 0 0 0 0.8px rgb(150, 150, 150);
}

.wordCount {
   margin: 0 0;
   text-align: end;
   color: rgb(160, 160, 160);
}

